Fix x-overflow on about section

--- a/resources/sass/sections/_about.scss
+++ b/resources/sass/sections/_about.scss
@@ -51,6 +51,11 @@
     }
 }
 
+#about {
+    width: 100%;
+    overflow-x: hidden;
+}
+
 #about > .row {
     background-position: left center;
     background-repeat: no-repeat;
@@ -59,7 +64,7 @@
     height: 100%;
 }
 .about-text {
-    padding: 50px 30px 50px;
+    padding: 50px 60px 50px;
     background: #fff;
 
     .iconboxleft {
